1. fixed paging in js 2. fixed ff issue 3. fixed css, 4. added new tests 5. fixed mock class
1. paging was sometime returning too many values
2. bootstrap img-responsive not woking out of the box on ff
3. some image classes needed more specificity
4. test for empty response
5. mocker didn’t handle string ids (the API does though)

Additionally fixed tests!

--- a/app/assets/stylesheets/photos.css.scss
+++ b/app/assets/stylesheets/photos.css.scss
@@ -18,7 +18,7 @@
     height: 150px;
     float:left;
     position:relative;
-    img{
+    img.photo-tumbnail{
       width:150px;
       height: 150px;
     }
@@ -27,6 +27,7 @@
   #selected-photo{
     width:auto;
     height:auto;
+    max-width: 100%; //seems to be a ff issue http://stackoverflow.com/questions/14718033/responsive-images-wont-scale-with-firefox-as-screen-size-is-adjusted-works-in
 
     .photo-info{
       color:#000000;  
